--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "uri"
   ],
   "license": "MIT",
-  "author": "bubkoo <bubkoo.wy@gmail.com>",
+  "author": {
+    "name": "bubkoo",
+    "email": "bubkoo.wy@gmail.com"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mock-end/random-uri.git"
