--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "random-uri",
-  "version": "1.0.0",
-  "description": "Generate a random url.",
+  "version": "1.0.1",
+  "description": "Return a random url.",
   "main": "index.js",
   "scripts": {
     "lint": "jshint index.js",
@@ -12,19 +12,17 @@
     "prepublish": "npm test"
   },
   "keywords": [
-    "domaon",
-    "tld",
-    "randomly",
-    "random",
-    "rand",
-    "sampling",
-    "generator",
-    "generate",
-    "gen",
-    "network",
-    "email",
     "url",
-    "uri"
+    "uri",
+    "domain",
+    "web",
+    "random",
+    "randomly",
+    "randomize",
+    "chance",
+    "test",
+    "dice",
+    "mock"
   ],
   "license": "MIT",
   "author": {
@@ -47,6 +45,7 @@
     "mocha": "^2.4.5"
   },
   "dependencies": {
+    "object-assign": "^4.0.1",
     "pick-item": "^1.0.1",
     "random-domains": "1.0.0",
     "to-str": "^1.0.0"
